svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosite
spec:
  selector:
    app: mosite
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosite-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosite
  template:
    metadata:
      labels:
        app: mosite
    spec:
      containers:
      - name: mosite-container
        image: moabukar/mosite
        ports:
        - containerPort: 80
