ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-ingress
spec:
  rules:
  - http:
      paths:
      - path: /site
        pathType: Prefix
        backend:
          service:
            name: mosite
            port:
              number: 80
